--- a/kaisenweb/src/main/resources/templates/signin.html
+++ b/kaisenweb/src/main/resources/templates/signin.html
@@ -37,7 +37,9 @@
     </header>
     <div class="container-fluid">
       <div class="container">
-        <div class="row justify-content-center align-items-center">
+        <div
+          class="row justify-content-center align-items-center text-center pe-3"
+        >
           <div class="col-6 text-center">
             <img
               class="d-inline-block align-text-top pt-1 img-fluid pt-5 mt-5"
@@ -122,6 +124,11 @@
         </div>
       </div>
     </div>
+    <script
+      src="../static/assets/js/footer.js"
+      type="text/javascript"
+      defer
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"
       crossorigin="anonymous"
