--- a/kaisenweb/src/main/resources/templates/signup.html
+++ b/kaisenweb/src/main/resources/templates/signup.html
@@ -24,6 +24,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+
     <title>KaisenWeb</title>
   </head>
 
@@ -37,93 +38,94 @@
     </header>
     <div class="container-fluid">
       <div class="container">
-        <div class="row justify-content-center align-items-center">
+        <div
+          class="row justify-content-center align-items-center text-center pe-3"
+        >
           <div class="col-6 text-center">
             <img
               class="d-inline-block align-text-top pt-1 img-fluid pt-5 mt-5"
               src="../static/assets/image/logo/logo.png"
               alt=""
-              width="160"
-              height="120"
             />
           </div>
         </div>
       </div>
     </div>
-    <div class="container-fluid">
-      <div class="container">
-        <div class="row justify-content-center align-items-center">
-          <div class="col-10 text-center pt-5 mt-lg-5 mt-md-5">
-            <form class="row g-3 needs-validation" novalidate>
-              <div class="row text center justify-content-center">
-                <div class="col-sm-auto col-md-6 col-lg-4">
-                  <label for="validationCustom01" class="form-label"
-                    >Username</label
-                  >
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="validationCustom01"
-                    value=""
-                    required
-                    placeholder="Username"
-                  />
+    <section style="height: min-content !important">
+      <div class="container-fluid">
+        <div class="container">
+          <div class="row justify-content-center align-items-center">
+            <div class="col-10 text-center mf mt-lg-5 mt-md-5">
+              <form class="row g-3 needs-validation" novalidate>
+                <div class="row text center justify-content-center">
+                  <div class="col-sm-auto col-md-6 col-lg-4">
+                    <label for="validationCustom01" class="form-label"
+                      >Username</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="validationCustom01"
+                      value=""
+                      required
+                      placeholder="Username"
+                    />
 
-                  <div class="invalid-feedback">
-                    Please Provide a valid Username.
+                    <div class="invalid-feedback">
+                      Please Provide a valid Username.
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="row text center justify-content-center pt-2">
-                <div class="col-sm-auto col-md-6 col-lg-4">
-                  <label for="validationCustom02" class="form-label"
-                    >Email</label
-                  >
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="validationCustom02"
-                    value=""
-                    required
-                    placeholder="Email"
-                  />
+                <div class="row text center justify-content-center pt-2">
+                  <div class="col-sm-auto col-md-6 col-lg-4">
+                    <label for="validationCustom02" class="form-label"
+                      >Email</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="validationCustom02"
+                      value=""
+                      required
+                      placeholder="Email"
+                    />
 
-                  <div class="invalid-feedback">
-                    Please Provide a valid Email.
+                    <div class="invalid-feedback">
+                      Please Provide a valid Email.
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="row text center justify-content-center pt-2">
-                <div class="col-sm-auto col-md-6 col-lg-4">
-                  <label for="validationCustom03" class="form-label"
-                    >Password</label
-                  >
-                  <input
-                    type="password"
-                    class="form-control"
-                    id="validationCustom03"
-                    value=""
-                    required
-                    placeholder="Password"
-                  />
+                <div class="row text center justify-content-center pt-2">
+                  <div class="col-sm-auto col-md-6 col-lg-4">
+                    <label for="validationCustom03" class="form-label"
+                      >Password</label
+                    >
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="validationCustom03"
+                      value=""
+                      required
+                      placeholder="Password"
+                    />
 
-                  <div class="invalid-feedback">
-                    Please Provide a valid Passowrd.
+                    <div class="invalid-feedback">
+                      Please Provide a valid Passowrd.
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="row text center justify-content-center pt-2">
-                <div class="col-sm-auto col-md-6 col-lg-4">
-                  <label for="country" class="form-label">Country</label>
-                  <select id="country" class="form-select" required>
-                    <option>...</option>
-                  </select>
-                  <div class="invalid-feedback">
-                    Please select a valid Country.
+                <div class="row text center justify-content-center pt-2">
+                  <div class="col-sm-auto col-md-6 col-lg-4">
+                    <label for="country" class="form-label">Country</label>
+                    <select id="country" class="form-select" required>
+                      <option>...</option>
+                    </select>
+                    <div class="invalid-feedback">
+                      Please select a valid Country.
+                    </div>
                   </div>
                 </div>
-              </div>
-              <!--  <div class="row text center justify-content-center pt-2">
+                <!--  <div class="row text center justify-content-center pt-2">
                 <div class="col-sm-auto col-md-6 col-lg-4">
                   <label for="state" class="form-label">State</label>
                   <select id="state" class="form-select" required>
@@ -135,35 +137,45 @@
                 </div>
               </div>-->
 
-              <div class="row text center justify-content-center pt-2">
-                <div class="col-sm-auto col-md-6 col-lg-4">
-                  <div class="form-check">
-                    <input
-                      class="form-check-input pt-1"
-                      type="checkbox"
-                      value=""
-                      id="invalidCheck"
-                      required
-                    />
-                    <label class="form-check-label" for="invalidCheck">
-                      Agree to terms and conditions
-                    </label>
-                    <div class="invalid-feedback">
-                      You must agree before submitting.
+                <div class="row text center justify-content-center pt-2">
+                  <div class="col-sm-auto col-md-6 col-lg-4">
+                    <div class="form-check">
+                      <input
+                        class="form-check-input pt-1"
+                        type="checkbox"
+                        value=""
+                        id="invalidCheck"
+                        required
+                      />
+                      <label class="form-check-label" for="invalidCheck">
+                        Agree to terms and conditions
+                      </label>
+                      <div class="invalid-feedback">
+                        You must agree before submitting.
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-12">
-                <button class="btn btn-primary mb-5" type="submit">
-                  Sign Up
-                </button>
-              </div>
-            </form>
+                <div class="row justify-content-center pt-3">
+                  <div class="col-12">
+                    <button class="btn btn-primary mb-5" type="submit">
+                      Sign Up
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+      <span class="mt-s"></span>
+    </section>
+    <!--Problemi con il footer component-->
+    <script
+      src="../static/assets/js/footer.js"
+      type="text/javascript"
+      defer
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"
       crossorigin="anonymous"
