--- a/kaisenweb/src/main/resources/templates/recovery.html
+++ b/kaisenweb/src/main/resources/templates/recovery.html
@@ -76,61 +76,12 @@
                   </div>
                 </div>
               </div>
-              <div class="row text center justify-content-center pt-2">
-                <div class="col-sm-auto col-md-6 col-lg-4">
-                  <label for="validationCustom03" class="form-label"
-                    >Password</label
-                  >
-                  <input
-                    type="password"
-                    class="form-control"
-                    id="validationCustom03"
-                    value=""
-                    required
-                    placeholder="Password"
-                  />
 
-                  <div class="invalid-feedback">
-                    Please Provide a valid Passowrd.
-                  </div>
-                </div>
-              </div>
               <div class="row text center justify-content-center pt-4">
                 <div class="col-12">
-                  <button class="btn btn-primary" type="submit">Sign In</button>
-                </div>
-                <div class="col-12 pt-3">
-                  <p class="or">OR</p>
-                </div>
-                <div class="row">
-                  <div class="col-12">
-                    <a
-                      class="btn btn-outline-dark"
-                      href="/users/googleauth"
-                      role="button"
-                      style="text-transform: none"
-                    >
-                      <img
-                        width="20px"
-                        style="margin-bottom: 3px; margin-right: 5px"
-                        alt="Google sign-in"
-                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png"
-                      />
-                      Login with Google
-                    </a>
-                  </div>
-                </div>
-                <div
-                  class="row justify-content-center align-items-center text-center"
-                >
-                  <div class="col-12">
-                    <div class="pt-3">
-                      <a
-                        ><p class="line pe-md-5 me-md-5">Forgot Password?</p></a
-                      >
-                      <a><p class="line ps-md-5 ms-md-5">Sign up</p></a>
-                    </div>
-                  </div>
+                  <button class="btn btn-primary" type="submit">
+                    Recovery Password
+                  </button>
                 </div>
               </div>
             </form>
