--- a/kaisenweb/src/main/resources/templates/signup.html
+++ b/kaisenweb/src/main/resources/templates/signup.html
@@ -51,7 +51,7 @@
         </div>
       </div>
     </div>
-    <section style="height: min-content !important">
+    <section>
       <div class="container-fluid">
         <div class="container">
           <div class="row justify-content-center align-items-center">
@@ -171,6 +171,7 @@
       <span class="mt-s"></span>
     </section>
     <!--Problemi con il footer component-->
+    <div class="fix-footer-si"></div>
     <script
       src="../static/assets/js/footer.js"
       type="text/javascript"
