--- a/kaisenweb/src/main/resources/static/assets/css/style.css
+++ b/kaisenweb/src/main/resources/static/assets/css/style.css
@@ -127,3 +127,6 @@ div.fix-footer ~ footer {
   display: inline !important;
   color: var(--light) !important;
 }
+.noscriptmsg {
+  color: var(--light) !important;
+}
