--- a/kaisenweb/src/main/resources/templates/recovery.html
+++ b/kaisenweb/src/main/resources/templates/recovery.html
@@ -48,6 +48,16 @@
               width="160"
               height="120"
             />
+            <noscript>
+              <style type="text/css">
+                .pagecontainer {
+                  display: none;
+                }
+              </style>
+              <div class="noscriptmsg">
+                You don't have javascript enabled. Good luck with that.
+              </div>
+            </noscript>
           </div>
         </div>
       </div>
