--- a/kaisenweb/src/main/resources/templates/signup.html
+++ b/kaisenweb/src/main/resources/templates/signup.html
@@ -47,6 +47,16 @@
               src="../static/assets/image/logo/logo.png"
               alt=""
             />
+            <noscript>
+              <style type="text/css">
+                .pagecontainer {
+                  display: none;
+                }
+              </style>
+              <div class="noscriptmsg">
+                You don't have javascript enabled. Good luck with that.
+              </div>
+            </noscript>
           </div>
         </div>
       </div>
