Changed files location

--- a/kaisenweb/src/main/resources/templates/index.html
+++ b/kaisenweb/src/main/resources/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
-    <link href="../static/assets/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/index.css" />
+    <link href="assets/css/style.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
@@ -31,7 +31,7 @@
   <body>
     <header>
       <script
-        src="../static/assets/js/navbar.js"
+        src="assets/js/navbar.js"
         type="text/javascript"
         defer
       ></script>
@@ -44,7 +44,7 @@
           <div class="col-6 text-center">
             <img
               class="d-inline-block align-text-top pt-1 img-fluid pt-5 mt-5"
-              src="../static/assets/image/logo/logo.png"
+              src="assets/image/logo/logo.png"
               alt=""
               width="160"
               height="120"
@@ -175,7 +175,7 @@
     </div>
     <div class="fix-footer"></div>
     <script
-      src="../static/assets/js/footer.js"
+      src="assets/js/footer.js"
       type="text/javascript"
       defer
     ></script>
@@ -188,8 +188,8 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <script src="../static/assets/js/custom.js"></script>
-    <script src="../static/assets/js/country-states.js"></script>
+    <script src="assets/js/custom.js"></script>
+    <script src="assets/js/country-states.js"></script>
     <script
       src="https://kit.fontawesome.com/f85002145c.js"
       crossorigin="anonymous"
