--- a/kaisenweb/src/main/resources/templates/index.html
+++ b/kaisenweb/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/css/index.css" />
+    <link rel="stylesheet" href="assets/css/carousel.css" />
     <link href="assets/css/style.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap"
@@ -30,11 +30,7 @@
 
   <body>
     <header>
-      <script
-        src="assets/js/navbar.js"
-        type="text/javascript"
-        defer
-      ></script>
+      <script src="assets/js/navbar.js" type="text/javascript" defer></script>
     </header>
     <div class="container-fluid">
       <div class="container">
@@ -71,13 +67,13 @@
               <a href="#section3" class="arrow__btn">‹</a>
               <div class="item">
                 <img
-                  src="https://occ-0-1567-1123.1.nflxso.net/dnm/api/v5/rendition/412e4119fb212e3ca9f1add558e2e7fed42f8fb4/AAAABRvngexxF8H1-OzRWFSj6ddD-aB93tTBP9kMNz3cIVfuIfLEP1E_0saiNAwOtrM6xSOXvoiSCMsihWSkW0dq808-R7_lBnr6WHbjkKBX6I3sD0uCcS8kSPbRjEDdG8CeeVXEAEV6spQ.webp"
+                  src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
                   alt="Describe Image"
                 />
               </div>
               <div class="item">
                 <img
-                  src="https://occ-0-243-299.1.nflxso.net/dnm/api/v5/rendition/412e4119fb212e3ca9f1add558e2e7fed42f8fb4/AAAABZEK-7pZ1H5FD4cTyUb9qB_KeyJGz5p-kfPhCFv4GU_3mbdm8Xfsy4IBchlG9PFNdGff8cBNPaeMra72VFnot41nt0y3e8RLgaVwwh3UvyM2H2_MkmadWbQUeGuf811K7-cxJJh7gA.jpg"
+                  src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
                   alt="Describe Image"
                 />
               </div>
@@ -174,11 +170,7 @@
       </div>
     </div>
     <div class="fix-footer"></div>
-    <script
-      src="assets/js/footer.js"
-      type="text/javascript"
-      defer
-    ></script>
+    <script src="assets/js/footer.js" type="text/javascript" defer></script>
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"
       crossorigin="anonymous"
