--- a/kaisenweb/src/main/resources/templates/index.html
+++ b/kaisenweb/src/main/resources/templates/index.html
@@ -67,31 +67,57 @@
               <a href="#section3" class="arrow__btn">‹</a>
               <div class="item">
                 <img
+                  class="img-mb"
                   src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
                   alt="Describe Image"
                 />
               </div>
               <div class="item">
                 <img
+                  class="img-mb"
                   src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
                   alt="Describe Image"
                 />
               </div>
               <div class="item">
                 <img
-                  src="https://occ-0-243-299.1.nflxso.net/dnm/api/v5/rendition/412e4119fb212e3ca9f1add558e2e7fed42f8fb4/AAAABQCoK53qihwVPLRxPEDX98nyYpGbxgi5cc0ZOM4iHQu7KQvtgNyaNM5PsgI0vy5g3rLPZdjGCFr1EggrCPXpL77p2H08jV0tNEmIfs_e8KUfvBJ6Ay5nM4UM1dl-58xA6t1swmautOM.webp"
+                  class="img-mb"
+                  src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
                   alt="Describe Image"
                 />
               </div>
               <div class="item">
                 <img
-                  src="https://occ-0-243-299.1.nflxso.net/dnm/api/v5/rendition/412e4119fb212e3ca9f1add558e2e7fed42f8fb4/AAAABdYtAqj8CyaJTWq5taD8Ro_UgwH3nne9QpFGVps-2J3IG-leqrfqXFii4jzZn48nPYTkrlwKQEV0R7_cEKlYBPRzdKqNODc-Oz26IL3LlLgFboXibIWXwxzeYxzuqn0I9TpARjeByw.jpg"
+                  class="img-mb"
+                  src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
                   alt="Describe Image"
                 />
               </div>
               <div class="item">
                 <img
-                  src="https://occ-0-243-299.1.nflxso.net/dnm/api/v5/rendition/412e4119fb212e3ca9f1add558e2e7fed42f8fb4/AAAABbcCX42tsqGbBvO2y9CQv5-7QvYbCfoHtXsuc6NPCtZaKa4l4fBX3XWvUwG9F2A3CTsNpHVmulxBbdXKwK8Q6xGjejd9FoadGkZ7CnGrSl601TOQjzSHJ23NuIPC8j0QMGORL4uRIA.jpg"
+                  class="img-mb"
+                  src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
+                  alt="Describe Image"
+                />
+              </div>
+              <div class="item">
+                <img
+                  class="img-mb"
+                  src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
+                  alt="Describe Image"
+                />
+              </div>
+              <div class="item">
+                <img
+                  class="img-mb"
+                  src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
+                  alt="Describe Image"
+                />
+              </div>
+              <div class="item">
+                <img
+                  class="img-mb"
+                  src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
                   alt="Describe Image"
                 />
               </div>
