--- a/kaisenweb/src/main/resources/static/assets/css/carousel.css
+++ b/kaisenweb/src/main/resources/static/assets/css/carousel.css
@@ -1,65 +1,214 @@
-html {
-  scroll-behavior: smooth;
+/*
+*
+* Boiler Plate stuff 
+*
+*********************************/
+:root {
+  --movie-width: 15.5vw;
+  --movie-height: 200px;
+  --arrow-width: 50px;
+  --slider-py: 200px;
+}
+@media only screen and (max-width: 1000px) {
+  :root {
+    --movie-width: 25vw;
+  }
 }
 
 body {
-  margin: 0;
-  background-color: #000;
+  background-color: #141414;
+  font-family: "Heebo", sans-serif;
 }
 
-h1 {
-  font-family: Arial;
-  color: red;
-  text-align: center;
-}
-
-.wrapper {
-  display: grid;
-  grid-template-columns: repeat(3, 100%);
-  overflow: hidden;
-  scroll-behavior: smooth;
-}
-.wrapper section {
-  width: 100%;
+.container-c {
   position: relative;
-  display: grid;
-  grid-template-columns: repeat(8, auto);
-  margin: 20px 0;
-}
-.wrapper section .item {
-  padding: 0 2px;
-  transition: 250ms all;
-}
-.wrapper section .item:hover {
-  margin: 0 40px;
-  transform: scale(1.2);
-}
-.wrapper section a {
-  position: absolute;
-  color: #fff;
-  text-decoration: none;
-  font-size: 6em;
-  background: rgb(0, 0, 0);
-  width: 80px;
-  padding: 20px;
-  text-align: center;
-  z-index: 1;
-}
-.wrapper section a:nth-of-type(1) {
-  top: 0;
-  bottom: 0;
-  left: 0;
-  background: linear-gradient(-90deg, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 100%);
-}
-.wrapper section a:nth-of-type(2) {
-  top: 0;
-  bottom: 0;
-  right: 0;
-  background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 100%);
 }
 
-/*@media only screen and (max-width: 600px) {
-  a.arrow__btn {
+.logo {
+  color: red;
+  font-size: 4rem;
+  text-align: center;
+}
+
+/*
+*
+* THE SLIDER CONTAINER
+*
+*********************************/
+.slider {
+  width: 100%;
+  overflow-x: scroll;
+  overflow-y: visible;
+  white-space: nowrap;
+  position: relative;
+  /*padding-top: var(--slider-py);*/
+  padding-bottom: var(--slider-py);
+}
+
+/*
+*
+* SLIDER INDICATORS
+*
+*********************************/
+.container-indicators {
+  width: 100px;
+  position: absolute;
+  right: 0;
+  top: calc(var(--slider-py) - 60px);
+  visibility: hidden;
+}
+.indicator {
+  width: 15px;
+  height: 2px;
+  background-color: grey;
+  display: inline-block;
+}
+.indicator.active {
+  background-color: white;
+}
+
+/*
+*
+* MOVIE ELEMENTS!
+*
+*********************************/
+.movie {
+  width: 9.5rem;
+  height: var(--movie-height);
+  display: inline-block;
+  position: relative;
+  color: white;
+  padding: 0 2px;
+  font-size: 0.8rem;
+  transition: all 0.8s ease-in-out;
+}
+@media (min-width: 1000px) {
+  .movie:nth-of-type(1) {
+    margin-left: var(--arrow-width);
+  }
+}
+.movie img {
+  object-fit: cover;
+  height: 100%;
+  /*width: 100%;*/
+  border-radius: 10px;
+}
+
+.description {
+  position: absolute;
+  display: none;
+  z-index: 9999;
+  background-color: #272727;
+  width: 8.4rem;
+  margin-top: -10px;
+  padding: 10px 0;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  margin-left: 7.3px;
+}
+
+@media only screen and (min-width: 900px) {
+  .movie:hover {
+    transform: scale(1.3);
+    z-index: 2;
+  }
+  /* Make description visible when movie is hovered */
+  .movie:hover > .description {
+    display: block;
+  }
+  .movie:hover > img {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+}
+
+.description__buttons-container {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+}
+
+.description__text-container {
+  padding: 10px;
+}
+
+.description__match {
+  color: green;
+}
+
+.description__rating {
+  outline: 1px solid white;
+  padding: 0 3px;
+  margin: 0 5px;
+}
+
+.description__button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+  border: 2px solid white;
+  text-align: center;
+  font-size: 8px;
+  margin-right: 5px;
+  border-radius: 100%;
+}
+
+.description__button:hover {
+  border-color: grey;
+  color: grey;
+  cursor: pointer;
+}
+
+.description__button:nth-of-type(5) {
+  margin-left: auto;
+  margin-right: 0;
+}
+
+/*
+*
+* BUTTONS
+*
+*********************************/
+.btn-nav {
+  width: 6rem rem;
+  height: var(--movie-height);
+  border-radius: 5px;
+  position: absolute;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  outline: none;
+  border: none;
+  color: white;
+  top: 10px;
+  z-index: 5;
+}
+
+#moveLeft {
+  left: 0;
+}
+
+#moveRight {
+  right: 0;
+}
+
+@media only screen and (max-width: 900px) {
+  .btn-nav {
     display: none;
   }
-}*/ /*# sourceMappingURL=index.css.map */
+}
+
+@media only screen and (min-width: 901px) {
+  .container-c:hover .btn-nav,
+  .container-c:hover .container-indicators {
+    visibility: visible;
+  }
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+.d-none {
+  display: none;
+}
