--- a/kaisenweb/src/main/resources/templates/index.html
+++ b/kaisenweb/src/main/resources/templates/index.html
@@ -30,21 +30,67 @@
 
   <body>
     <header>
-      <script src="assets/js/navbar.js" type="text/javascript" defer></script>
+      <section id="nav">
+        <nav class="navbar navbar-expand-lg sticky-top">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#home">
+              <img
+                class="d-inline-block align-text-top pt-1 img-fluid"
+                src="assets/image/logo/logo.png"
+                alt=""
+                width="80"
+                height="60"
+              />
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"
+                ><i class="fa-solid fa-bars"></i>
+              </span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul id="navLink" class="navbar-nav">
+                <li class="nav-item">
+                  <a
+                    class="nav-link matter home active"
+                    aria-current="page"
+                    href="#home"
+                  >
+                    Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link aboutme matter" href="#aboutme">
+                    About Me</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link project matter" href="#project">
+                    Project</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link contact matter" href="#contact">
+                    Contact
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </section>
     </header>
     <div class="container-fluid">
       <div class="container">
-        <div
-          class="row justify-content-center align-items-center text-center pe-3"
-        >
+        <div class="row justify-content-start align-items-center pe-3">
           <div class="col-6 text-center">
-            <img
-              class="d-inline-block align-text-top pt-1 img-fluid pt-5 mt-5"
-              src="assets/image/logo/logo.png"
-              alt=""
-              width="160"
-              height="120"
-            />
             <noscript>
               <style type="text/css">
                 .pagecontainer {
@@ -60,141 +106,107 @@
       </div>
     </div>
     <div class="container-fluid">
-      <div class="row justify-content-center text-center">
+      <div class="justify-content-center align-items-start text-center">
+        <div class="col-md-auto col-auto col-lg-auto">
+          <h1 class="pt-5">Popolari</h1>
+        </div>
+      </div>
+      <div class="container container-c">
+        <button type="button" id="moveLeft" class="btn-nav">ᐊ</button>
+
+        <div class="slider" id="mySlider">
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://images.unsplash.com/photo-1585951237318-9ea5e175b891?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+              alt=""
+              srcset=""
+            />
+            <div class="description">
+              <div class="description__buttons-container">
+                <div class="description__button">
+                  <i class="fas fa-play"></i>
+                </div>
+                <div class="description__button">
+                  <i class="fas fa-plus"></i>
+                </div>
+                <div class="description__button">
+                  <i class="fas fa-thumbs-up"></i>
+                </div>
+                <div class="description__button">
+                  <i class="fas fa-thumbs-down"></i>
+                </div>
+                <div class="description__button">
+                  <i class="fas fa-chevron-down"></i>
+                </div>
+              </div>
+              <div class="description__text-container">
+                <br /><br />
+                <span>Explosive</span>
+                <span>&middot;</span>
+                <span>Exciting</span>
+                <span>&middot;</span>
+                <span>Family</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button type="button" id="moveRight" class="btn-nav">ᐅ</button>
+      </div>
+    </div>
+    <!--<div class="container-fluid">
+      <div class="row justify-content-center align-items-center text-center">
         <div class="col-12">
-          <div class="wrapper">
-            <section id="section1">
-              <a href="#section3" class="arrow__btn">‹</a>
-              <div class="item">
+          <div class="container container-c">
+            
+            <button type="button" id="moveLeft" class="btn-nav">ᐊ</button>
+             <div class="container-indicators">
+              <div class="indicator active" data-index="0"></div>
+              <div class="indicator" data-index="1"></div>
+              <div class="indicator" data-index="2"></div>
+            </div>
+            <div class="slider" id="mySlider">
+              <div class="movie" id="movie0">
                 <img
                   class="img-mb"
-                  src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
-                  alt="Describe Image"
+                  src="https://images.unsplash.com/photo-1585951237318-9ea5e175b891?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+                  alt=""
+                  srcset=""
                 />
+                <div class="description">
+                  <div class="description__buttons-container">
+                    <div class="description__button">
+                      <i class="fas fa-play"></i>
+                    </div>
+                    <div class="description__button">
+                      <i class="fas fa-plus"></i>
+                    </div>
+                    <div class="description__button">
+                      <i class="fas fa-thumbs-up"></i>
+                    </div>
+                    <div class="description__button">
+                      <i class="fas fa-thumbs-down"></i>
+                    </div>
+                    <div class="description__button">
+                      <i class="fas fa-chevron-down"></i>
+                    </div>
+                  </div>
+                  <div class="description__text-container">
+                    <br /><br />
+                    <span>Explosive</span>
+                    <span>&middot;</span>
+                    <span>Exciting</span>
+                    <span>&middot;</span>
+                    <span>Family</span>
+                  </div>
+                </div>
               </div>
-              <div class="item">
-                <img
-                  class="img-mb"
-                  src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
-                  alt="Describe Image"
-                />
-              </div>
-              <div class="item">
-                <img
-                  class="img-mb"
-                  src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
-                  alt="Describe Image"
-                />
-              </div>
-              <div class="item">
-                <img
-                  class="img-mb"
-                  src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
-                  alt="Describe Image"
-                />
-              </div>
-              <div class="item">
-                <img
-                  class="img-mb"
-                  src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
-                  alt="Describe Image"
-                />
-              </div>
-              <div class="item">
-                <img
-                  class="img-mb"
-                  src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
-                  alt="Describe Image"
-                />
-              </div>
-              <div class="item">
-                <img
-                  class="img-mb"
-                  src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
-                  alt="Describe Image"
-                />
-              </div>
-              <div class="item">
-                <img
-                  class="img-mb"
-                  src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
-                  alt="Describe Image"
-                />
-              </div>
-              <a href="#section2" class="arrow__btn">›</a>
-            </section>
-            <section id="section2">
-              <a href="#section1" class="arrow__btn">‹</a>
-              <div class="item">
-                <img
-                  src="https://occ-0-243-299.1.nflxso.net/dnm/api/v5/rendition/412e4119fb212e3ca9f1add558e2e7fed42f8fb4/AAAABVopDZ5Fy9_fk_HO5WxHTXKKjKhtWFupbSjuvPwfLK_vytzon4EwRUdGgYJ34JwPxOTK_NkV3aXfkULMB0Dcct-FyfqzH-X44VXuRMp4QeBHlvKwWeZFpZlGdItPzmmg4scmwhG7SQ.jpg"
-                  alt="Describe Image"
-                />
-              </div>
-              <div class="item">
-                <img
-                  src="https://occ-0-243-299.1.nflxso.net/dnm/api/v5/rendition/412e4119fb212e3ca9f1add558e2e7fed42f8fb4/AAAABTOj1-116yVcgKWMU2dI3GFR4x0fSkiGsqtLLeLUxRR7STaksjAqBTrYlTfrB8nIGnGvXksi0ewXAhVGg6-pLxpFOIfcpjK-pf8D5xehFZo5a6vJbo4L0AGbrzglbyUoq255QBJgRQ.jpg"
-                  alt="Describe Image"
-                />
-              </div>
-              <div class="item">
-                <img
-                  src="https://occ-0-243-299.1.nflxso.net/dnm/api/v5/rendition/a76057bcfd003711a76fb3985b1f2cf74beee3b8/AAAABd3IBDpxbRcHXvRMFCZeKa2aHLU1P4SJtrACMS9om3yhLjqPlvNlmR_fypPxjtbsbnKaC4JZhPSpDG4r_kdxSHHAltWguMcCB-1Y1OShr2zWfUv7Whf_39fNH5ZJ3_0gxQrs0akmQjQz44_LT7jXH5LMZ7iMBAzac5IEj4m7Fn_5OWEGYnVsDsKG-QTommDooULMDF9bEw.jpg"
-                  alt="Describe Image"
-                />
-              </div>
-              <div class="item">
-                <img
-                  src="https://occ-0-243-299.1.nflxso.net/dnm/api/v5/rendition/a76057bcfd003711a76fb3985b1f2cf74beee3b8/AAAABXSd7bhDddcwkq9XpksoQFCHVx29Sxl_h4hb2n3F2GIt32a4XWcOnctQfgnT5qdolv8UML6_xNB5CJ89h56wueb13mYmEBr0sx5e9iLPdtVcOQAOmKXKWHHXwFvJuCUwuNnL3s8eAQwqLXPVMHMEsujM684rUGrZNF2btN2GRy5-RyEslsxZO93V2Q_H2bWs8A8oayt1h5M.webp"
-                  alt="Describe Image"
-                />
-              </div>
-              <div class="item">
-                <img
-                  src="https://occ-0-243-299.1.nflxso.net/dnm/api/v5/rendition/a76057bcfd003711a76fb3985b1f2cf74beee3b8/AAAABbXWODpAWqVXcmmjMA7K-2mPkQpvwCLfSdeyhVXzR8A3MSpdSEnnjf4HEJJTYC-TnktU6njTUGAxmzWEYCaJbk4v_ZeL-7QGzmkvYBjg_N-evr2XmcX-Fanoyvu_nimFP4iigPe4O3Vr_WcgplhwkDrJwPUJa84wRLrNAx3TufN5V7cWRP4indqu5HQahvgFEqfL9zjp4g.jpg"
-                  alt="Describe Image"
-                />
-              </div>
-              <a href="#section3" class="arrow__btn">›</a>
-            </section>
-            <section id="section3">
-              <a href="#section2" class="arrow__btn">‹</a>
-              <div class="item">
-                <img
-                  src="https://occ-0-243-299.1.nflxso.net/dnm/api/v5/rendition/412e4119fb212e3ca9f1add558e2e7fed42f8fb4/AAAABRr4YxdaABuAuH_3FmSQZn7BCvLp-UUPsXE9MiYpvFP3CSUHV2zOew5oVqKqqdaOd3tbFVS0Uf67uIs7_eZydlCghg4nK0nMatRpPImABwTOhnNzCLCxdKrua7pPIcPCZqBYTeAO5g.jpg"
-                  alt="Describe Image"
-                />
-              </div>
-              <div class="item">
-                <img
-                  src="https://occ-0-243-299.1.nflxso.net/dnm/api/v5/rendition/412e4119fb212e3ca9f1add558e2e7fed42f8fb4/AAAABTyWK1MKaw8GcObtz47R2Tj7wkLJ7qQu9tk6TVpcoyxpzD4B-zZ569bQ5vGrREBL-MWFkGilXUwy7tCDaj2XOGkUB4RsbbFAmp9NgSr6lygMpUGNHSlyfrFbUORsRkrxSIoh_ggOvg.jpg"
-                  alt="Describe Image"
-                />
-              </div>
-              <div class="item">
-                <img
-                  src="https://occ-0-243-299.1.nflxso.net/dnm/api/v5/rendition/a76057bcfd003711a76fb3985b1f2cf74beee3b8/AAAABY7NwkWEJIfXsn6t3Li4bGSCQ1nEErPisI5ZZtXlC-_VRBZOUrhWK5X3vt3t6SR_cpgVhCwxgQqFFDJhk62Kk8hawOnYGZMr0LKeLczMFV2zalCFjkcdLksvT4HB2LEi6LFyruyk3Uu0LmNGsHfC2A8Bly60smr_3sDbz4RruXcklPOG1qYq9wUVu3zfaiwNvqmG4b8aFA.jpg"
-                  alt="Describe Image"
-                />
-              </div>
-              <div class="item">
-                <img
-                  src="https://occ-0-243-299.1.nflxso.net/dnm/api/v5/rendition/a76057bcfd003711a76fb3985b1f2cf74beee3b8/AAAABemXHOga9feFnOux6I2YyACBD94wvM7N3vcTGIfMpQ_BcaXeoeM9XyzdVdamKtxt0SHXZfvsl6czcp3E48tXMLtHBxuQsh1BjHtPGgJDZ81je_FjItINiqzLtir0A30s_e4KR8G3d7AYAPDjZVOY97bNpzNqtkcHcGp7fGnJByVCps1uLfG9U9tK3Ma1A_3JbRt0NiT2_Q.jpg"
-                  alt="Describe Image"
-                />
-              </div>
-              <div class="item">
-                <img
-                  src="https://occ-0-243-299.1.nflxso.net/dnm/api/v5/rendition/a76057bcfd003711a76fb3985b1f2cf74beee3b8/AAAABVxuRB932hvre-XP0gh6ar5ztoR3Oe3QjKHkyvcDnRak2MKXOrx5H7mFQSvggefMFOppwEs7ZCCpiqrJ_CYGvtvYB9NpU4SWUtNO6uV2u-DTID267AcHjHcGvGBQJ1ufddDkxcGOZyi5MlOQ5QUmBun4652FbYUnib3zMYQDgcna_Pvz8y_HO5fbokxezrRR1JZAAiqFSQ.jpg"
-                  alt="Describe Image"
-                />
-              </div>
-              <a href="#section1" class="arrow__btn">›</a>
-            </section>
+            </div>
+            <button type="button" id="moveRight" class="btn-nav">ᐅ</button>
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
     <div class="fix-footer"></div>
     <script src="assets/js/footer.js" type="text/javascript" defer></script>
     <script
