--- a/kaisenweb/src/main/resources/templates/index.html
+++ b/kaisenweb/src/main/resources/templates/index.html
@@ -122,7 +122,7 @@
               alt=""
               srcset=""
             />
-            <div class="description">
+            <!--<div class="description">
               <div class="description__buttons-container">
                 <div class="description__button">
                   <i class="fas fa-play"></i>
@@ -148,7 +148,56 @@
                 <span>&middot;</span>
                 <span>Family</span>
               </div>
-            </div>
+            </div>-->
+          </div>
+        </div>
+        <button type="button" id="moveRight" class="btn-nav">ᐅ</button>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="justify-content-center align-items-start text-center">
+        <div class="col-md-auto col-auto col-lg-auto">
+          <h1 class="pt-5">Di tendenza</h1>
+        </div>
+      </div>
+      <div class="container container-c">
+        <button type="button" id="moveLeft" class="btn-nav">ᐊ</button>
+
+        <div class="slider" id="mySlider">
+          <div class="movie" id="movie1">
+            <img
+              class="img-mb"
+              src="https://images.unsplash.com/photo-1585951237318-9ea5e175b891?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+              alt=""
+              srcset=""
+            />
+            <!--<div class="description">
+              <div class="description__buttons-container">
+                <div class="description__button">
+                  <i class="fas fa-play"></i>
+                </div>
+                <div class="description__button">
+                  <i class="fas fa-plus"></i>
+                </div>
+                <div class="description__button">
+                  <i class="fas fa-thumbs-up"></i>
+                </div>
+                <div class="description__button">
+                  <i class="fas fa-thumbs-down"></i>
+                </div>
+                <div class="description__button">
+                  <i class="fas fa-chevron-down"></i>
+                </div>
+              </div>
+              <div class="description__text-container">
+                <br /><br />
+                <span>Explosive</span>
+                <span>&middot;</span>
+                <span>Exciting</span>
+                <span>&middot;</span>
+                <span>Family</span>
+              </div>
+            </div>-->
           </div>
         </div>
         <button type="button" id="moveRight" class="btn-nav">ᐅ</button>
