--- a/kaisenweb/src/main/resources/templates/index.html
+++ b/kaisenweb/src/main/resources/templates/index.html
@@ -115,46 +115,169 @@
         <button type="button" id="moveLeft" class="btn-nav">ᐊ</button>
 
         <div class="slider" id="mySlider">
-          <div class="movie" id="movie0">
+          <div class="movie" id="main">
             <img
               class="img-mb"
-              src="https://images.unsplash.com/photo-1585951237318-9ea5e175b891?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
               alt=""
               srcset=""
             />
-            <!--<div class="description">
-              <div class="description__buttons-container">
-                <div class="description__button">
-                  <i class="fas fa-play"></i>
-                </div>
-                <div class="description__button">
-                  <i class="fas fa-plus"></i>
-                </div>
-                <div class="description__button">
-                  <i class="fas fa-thumbs-up"></i>
-                </div>
-                <div class="description__button">
-                  <i class="fas fa-thumbs-down"></i>
-                </div>
-                <div class="description__button">
-                  <i class="fas fa-chevron-down"></i>
-                </div>
-              </div>
-              <div class="description__text-container">
-                <br /><br />
-                <span>Explosive</span>
-                <span>&middot;</span>
-                <span>Exciting</span>
-                <span>&middot;</span>
-                <span>Family</span>
-              </div>
-            </div>-->
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="movie" id="movie0">
+            <img
+              class="img-mb"
+              src="https://image.tmdb.org/t/p/w220_and_h330_face/3PNftGpAkQJvDSX7XhCNJiNPFh8.jpg"
+              alt=""
+              srcset=""
+            />
           </div>
         </div>
         <button type="button" id="moveRight" class="btn-nav">ᐅ</button>
       </div>
-    </div>
-    <div class="container-fluid">
       <div class="justify-content-center align-items-start text-center">
         <div class="col-md-auto col-auto col-lg-auto">
           <h1 class="pt-5">Di tendenza</h1>
@@ -203,6 +326,7 @@
         <button type="button" id="moveRight" class="btn-nav">ᐅ</button>
       </div>
     </div>
+
     <!--<div class="container-fluid">
       <div class="row justify-content-center align-items-center text-center">
         <div class="col-12">
