--- a/kaisenweb/src/main/resources/static/assets/css/carousel.css
+++ b/kaisenweb/src/main/resources/static/assets/css/carousel.css
@@ -84,7 +84,7 @@ body {
 }
 @media (min-width: 1000px) {
   .movie:nth-of-type(1) {
-    margin-left: var(--arrow-width);
+    /*margin-left: var(--arrow-width);*/
   }
 }
 .movie img {
