--- a/kaisenweb/src/main/resources/static/assets/css/carousel.css
+++ b/kaisenweb/src/main/resources/static/assets/css/carousel.css
@@ -80,7 +80,7 @@ body {
   color: white;
   padding: 0 2px;
   font-size: 0.8rem;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.25s ease-in-out;
 }
 @media (min-width: 1000px) {
   .movie:nth-of-type(1) {
@@ -109,7 +109,8 @@ body {
 
 @media only screen and (min-width: 900px) {
   .movie:hover {
-    transform: scale(1.3);
+    transform: scale(1.12);
+    /*transform: translateY(-5px);*/
     z-index: 2;
   }
   /* Make description visible when movie is hovered */
