Implementata api nel front-end

--- a/kaisenweb/src/main/resources/templates/index.html
+++ b/kaisenweb/src/main/resources/templates/index.html
@@ -115,162 +115,11 @@
         <button type="button" id="moveLeft" class="btn-nav">ᐊ</button>
 
         <div class="slider" id="mySlider">
-          <div class="movie" id="main">
+          <div class="movie" id="main" th:each="poster : ${poster}">
             <img
               class="img-mb"
               src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/qOQGNTDXPe8AMa3g1Ll60yNfKid.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/lVlwOuF9TQeYJ8oY7cpehvEaE4k.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
-          <div class="movie" id="movie0">
-            <img
-              class="img-mb"
-              src="https://image.tmdb.org/t/p/w220_and_h330_face/3PNftGpAkQJvDSX7XhCNJiNPFh8.jpg"
+              th:src="@{${'https://image.tmdb.org/t/p/w220_and_h330_face/' + poster}}"
               alt=""
               srcset=""
             />
